--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <section class="contact">
                 <h2>Kontak</h2>
                 <p>Email: thebalx16@gmail.com</p>
-                <p>Github: Nanda-17bit</p>
+                <p>Github: Nanda17-bit</p>
                 <p>Instagram: @__nnd17</p>
                 
             </section>
